tests/e2e/object_no_type_cast.error
Error: syntax error in story at line 1, column 6

1|    a = (1 as any) as object
           ^^^^^^^^^^^^^^^^^^^

E0154: Type cast to `object` is not allowed.
