tests/e2e/object_no_type_cast.story
a = (1 as any) as object
